Fixed first step of scrolling not applying

I fixed the first step of scrolling not applying when switching from one slave
mouse device to another. This bug was happening because the Xinput2 event
XIDeviceChangedEvent is used for two different reasons, a device's properties
changing and the current slave device being switched. This code checks that the
reason field is set to XIDeviceChange (rather than XISlaveSwitch).

BUG=593453

Review URL: https://codereview.chromium.org/1883853002

Cr-Commit-Position: refs/heads/master@{#388182}

Former-commit-id: 47c6f3e7252ece9b52e5b86d40944e66442ea7aa