ui/events/platform/x11/x11_event_source.cc
@@ -111,7 +111,9 @@ void X11EventSource::ExtractCookieDataDispatchEvent(XEvent* xevent) {
 void X11EventSource::PostDispatchEvent(XEvent* xevent) {
   if (xevent->type == GenericEvent &&
       (xevent->xgeneric.evtype == XI_HierarchyChanged ||
-       xevent->xgeneric.evtype == XI_DeviceChanged)) {
+       (xevent->xgeneric.evtype == XI_DeviceChanged &&
+        static_cast<XIDeviceChangedEvent*>(xevent->xcookie.data)->reason ==
+            XIDeviceChange))) {
     ui::UpdateDeviceList();
     hotplug_event_handler_->OnHotplugEvent();
   }
